--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
                 >CV</a
               >
             </li>
+             <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#certificates"
+                >Certificates</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -230,6 +235,22 @@
         </div>
         <div class="row">
           <iframe src="https://onedrive.live.com/embed?cid=5C1C37D1D4EF17DB&resid=5C1C37D1D4EF17DB%218606&authkey=ALq5v89ofilymZ0&em=2" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
+        </div>
+      </div>
+    </section>
+    
+    <section id="certeficates" class="services-mf route">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12">
+            <div class="title-box text-center">
+              <h4 class="title-a">
+                <i class="icon ion-person"></i> Cetteficates
+              </h4>
+              <hr class="star-light-only" />
+              <p class="subtitle-a"></p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
