--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#cv">CV</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#certificates"
+              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://drive.google.com/drive/folders/1Gagl_AjA0eLs_gd8IgXCWALWa2i3ytFP?usp=sharing"
                 >Certificates</a
               >
             </li>
@@ -239,93 +239,6 @@
             frameborder="0"
             scrolling="no"
           ></iframe>
-        </div>
-      </div>
-    </section>
-
-    <section id="certeficates" class="services-mf route">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="title-box text-center">
-              <h4 class="title-a">
-                <i class="icon ion-person"></i> Certificates
-              </h4>
-              <hr class="star-light-only" />
-              <p class="subtitle-a"></p>
-            </div>
-            <div>
-              <div data-ride="carousel" class="carousel slide" id="carousel-1">
-                <div class="carousel-inner" style="height: 600px; width: 100%">
-                  <div class="carousel-item">
-                    <iframe src="https://onedrive.live.com/embed?cid=5C1C37D1D4EF17DB&resid=5C1C37D1D4EF17DB%218616&authkey=AK8h4UgmAyJgVD4&em=2" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-                  </div>
-                  <div class="carousel-item">
-                    <iframe src="https://onedrive.live.com/embed?cid=5C1C37D1D4EF17DB&resid=5C1C37D1D4EF17DB%218617&authkey=AMcdZK3buYEE6tU&em=2" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-                  </div>
-                  <div class="carousel-item active">
-                    <iframe src="https://onedrive.live.com/embed?cid=5C1C37D1D4EF17DB&resid=5C1C37D1D4EF17DB%218618&authkey=AJ4XGIvfIQo5GrU&em=2" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-                  </div>
-                  <div class="carousel-item active">
-                    <iframe src="https://onedrive.live.com/embed?cid=5C1C37D1D4EF17DB&resid=5C1C37D1D4EF17DB%218619&authkey=AEBSKgBhcsQ205s&em=2" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-                  </div>
-                  <div class="carousel-item active">
-                    <iframe src="https://onedrive.live.com/embed?cid=5C1C37D1D4EF17DB&resid=5C1C37D1D4EF17DB%218620&authkey=AJ5cdyH1VNqyglY&em=2" width="100%" height="600" frameborder="0" scrolling="no"></iframe>
-                  </div>
-                  <div class="carousel-item active">
-                    <img src="https://am4pap001files.storage.live.com/y4mGyolAWWiGm_lT49eaER16d-6pjUx7rGthWsSpnVQVBjrKQxOiwYftHTI_N206hkKEjq_QGRiCfzs05-QfeIi_BxP49L1Ty8WwO1wWZFE4GiFIfWUmuiUdn5PGZS2l-LpdpKyO4FMuIYhX2o9WjBBgubcnPdvLewzJlolMWlXJ8VV6zSBSPbeMZqAKjbZgl9Y?width=2338&height=1654&cropmode=none" width="100%" height="600" />
-                  </div>
-                  <div class="carousel-item active">
-                    <img src="https://am4pap001files.storage.live.com/y4mlSIJ_Gt9Misvc0A5ZQ9xS1CxfkHg7h51aHMdOtZqGKdUoMaMpLfyrZ5DzzC_JDQURVRqkO3yI9sK8o7rvImCDJnZl7RljJXwVouR8FUPBgkzYqMGgEEqujAJ0lFU6N3P3Mxf79quAiOm9TPlTqfIXf1Uw_PShiEeYJlG4cVqguxoWKNza3VW8ebg2qMzuso2?width=1654&height=2338&cropmode=none" width="100%" height="600" />
-                  </div>
-                  <div class="carousel-item active">
-                    <img src="https://am4pap001files.storage.live.com/y4mHoWmRPY81vPNJfuUvsxxpmLM8lJerOls3arkfkWOEPEzg5k0FUSBwLBhR8yx3cwM-w2ZcYrXeVL1OFUZrf0wG5g8flLugI4YFDhl0ID7JkgELVkIGkV4CTVkW3t0Sy0amvhPrLcRQqv4dLPxZlTD4GIQhssU2zvzcJOhHqO54Pl69HRqv0sfMys5q6QaTsLW?width=1654&height=2338&cropmode=none" width="100%" height="600" />
-                  </div>
-                  <div class="carousel-item active">
-                    <img src="https://am4pap001files.storage.live.com/y4mOQoenkiUYcXKu2sbYpgFgOFdp3clcE1OPmfSuGPaRmY1sVt9cDQl0Fm7UshgQZY1SeE0tOOCZWHzfxMFJAqKoSRU1Fae9Iqw9h701FgJoby5fwSrCzD5x8puYRUCiubSqztkFDRXwLL4-hK3zNXgs1aviD8Y1J5FShOTkqhpgJsGSpLSZC35Ydt5y2y9m8nC?width=2338&height=1654&cropmode=none" width="100%" height="600" />
-                  </div>
-                  <div class="carousel-item active">
-                    <img src="https://am4pap001files.storage.live.com/y4ml5jq-vURueKmL1EdIoxllx0dUM2R7jHbtF_7eindKSfbVEUBuuFqDS1Z7E2fK98nU4zsZy0zisc4T2JmVv4_wukBFAYQPdRMBe1OuQ5rfJULACHYgNvasaDKgXOnHk0kM4sxuKTaGxFkluGcojL1XO27EltIb6NzXLGbp8QaP9k_KDqth8oeYHuwbtV29GYs?width=2338&height=1654&cropmode=none" width="100%" height="600" />
-                  </div>
-                  <div class="carousel-item active"></div>
-                </div>
-                <div>
-                  <a
-                    href="#carousel-1"
-                    role="button"
-                    data-slide="prev"
-                    class="carousel-control-prev"
-                    ><span
-                      style="background-color: rgb(4, 49, 38);"
-                      aria-hidden="true"
-                      class="carousel-control-prev-icon"
-                    ></span
-                    ><span class="sr-only">Previous</span></a
-                  ><a
-                    href="#carousel-1"
-                    role="button"
-                    data-slide="next"
-                    class="carousel-control-next"
-                    ><span
-                      style="background-color: rgb(4, 49, 38);"
-                      aria-hidden="true"
-                      class="carousel-control-next-icon"
-                    ></span
-                    ><span class="sr-only">Next</span></a
-                  >
-                </div>
-                <ol class="carousel-indicators">
-                  <li data-target="#carousel-1" data-slide-to="0"></li>
-                  <li data-target="#carousel-1" data-slide-to="1"></li>
-                  <li
-                    data-target="#carousel-1"
-                    data-slide-to="2"
-                    class="active"
-                  ></li>
-                </ol>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
