add linkedIn profile

--- a/index.html
+++ b/index.html
@@ -57,26 +57,31 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="nav navbar-nav ml-auto">
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about"
+              <a class="nav-link py-1 px-0 px-lg-3 rounded" href="#about"
                 >About</a
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#services"
+              <a class="nav-link py-1 px-0 px-lg-3 rounded" href="#services"
                 >Services</a
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact"
+              <a class="nav-link py-1 px-0 px-lg-3 rounded" href="#contact"
                 >Contact</a
               >
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#cv">CV</a>
+              <a class="nav-link py-1 px-0 px-lg-3 rounded" href="#cv">CV</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded" href="https://drive.google.com/drive/folders/1Gagl_AjA0eLs_gd8IgXCWALWa2i3ytFP?usp=sharing"
+              <a class="nav-link py-1 px-0 px-lg-3 rounded" href="https://drive.google.com/drive/folders/1Gagl_AjA0eLs_gd8IgXCWALWa2i3ytFP?usp=sharing"
                 >Certificates</a
+              >
+            </li>
+            <li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-1 px-0 px-lg-3 rounded" href="https://www.linkedin.com/in/mr-abiti/"
+                >LinkedIn</a
               >
             </li>
           </ul>
@@ -242,7 +247,6 @@
         </div>
       </div>
     </section>
-
     <section
       class="paralax-mf footer-paralax bg-image sect-mt1 route"
       style="background-image: url(img/overlay-bg.jpg); margin-top: 20px"
