--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       </div>
     </footer>
     <div class="copyright py-4 text-center text-white">
-      <div class="container">Copyright © Muluken Bogale 2021</div>
+      <div class="container">Muluken Bogale 2021</div>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
