--- a/index.html
+++ b/index.html
@@ -247,94 +247,7 @@
         </div>
       </div>
     </section>
-    <section
-      class="paralax-mf footer-paralax bg-image sect-mt1 route"
-      style="background-image: url(img/overlay-bg.jpg); margin-top: 20px"
-    >
-      <div class="overlay-mf"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="contact-mf">
-              <div id="contact" class="box-shadow-full outer-card">
-                <h3 class="text-center title-a">
-                  <i class="icon ion-ios-email"></i> Contact Me
-                </h3>
-                <div class="col-md-7 contact-border text-center">
-                  <div class="title-box-2"></div>
-                  <div>
-                    <form
-                      action=""
-                      method="post"
-                      role="form"
-                      class="contactForm"
-                    >
-                      <div id="sendmessage">
-                        Your message has been sent. Thank you!
-                      </div>
-                      <div id="errormessage"></div>
-                      <div class="row">
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input
-                              type="text"
-                              name="name"
-                              class="form-control"
-                              id="name"
-                              placeholder="Name"
-                              data-rule="minlen:4"
-                              data-msg="Please enter at least 4 chars"
-                            />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <input
-                              type="email"
-                              class="form-control"
-                              name="email"
-                              id="email"
-                              placeholder="Email"
-                              data-rule="email"
-                              data-msg="Please enter a valid email"
-                            />
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 mb-3">
-                          <div class="form-group">
-                            <textarea
-                              class="form-control"
-                              name="message"
-                              rows="5"
-                              data-rule="required"
-                              data-msg="Please write something for us"
-                              placeholder="Message"
-                            ></textarea>
-                            <div class="validation"></div>
-                          </div>
-                        </div>
-                        <div class="col-md-12 text-center submit">
-                          <button
-                            type="submit"
-                            class="button button-a button-big button-rouded submit-message"
-                          >
-                            Send
-                          </button>
-                        </div>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <footer class="footer">
+    <footer class="footer" style="margin-top: 40px;">
       <div class="container">
         <div class="row pd-2">
           <div class="col-md-4 col-sm-12 mb-2 mb-lg-0 text-center">
@@ -375,7 +288,8 @@
             style="color: white"
             class="text-center col-md-4 col-sm-12 my-3 mb-2 mb-lg-0"
           >
-            mulukenb89@gmail.com
+          <a style="text-decoration: none; color:white;" href="mailto:mulukenb89@gmail.com">mulukenb89@gmail.com</a>
+            
           </p>
         </div>
       </div>
